.provarCaches/00D5f000005vwGkEAI/objects/rstk__poapproval__c.object
<CustomObject>
    <description>poapproval__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapproval_approver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Valid approver as set up in System Setup (Manufacturing User, Approvers, etc.)</inlineHelpText>
        <label>Approver</label>
        <referenceTo>rstk__syapprv__c</referenceTo>
        <relationshipLabel>PO Approval</relationshipLabel>
        <relationshipName>PO_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapproval_comments__c</fullName>
        <inlineHelpText>User-defined comments up to 100 characters in length.</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poapproval_dte__c</fullName>
        <inlineHelpText>System-set date approval was accepted.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poapproval_ordno__c</fullName>
        <inlineHelpText>The PO number being approved.  Approvals are at the PO Level, not line level, so approving a PO approves all it&apos;s lines.</inlineHelpText>
        <label>PO</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>PO Approval</relationshipLabel>
        <relationshipName>PO_Approval</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poapproval_slot__c</fullName>
        <inlineHelpText>PO Approval Slot</inlineHelpText>
        <label>Slot</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poapproval_usrno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Display.  Valid Manufacturing user.</inlineHelpText>
        <label>User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>PO Approval</relationshipLabel>
        <relationshipName>poapproval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poapproval_yn__c</fullName>
        <inlineHelpText>Y or N.  Is Approval required?</inlineHelpText>
        <label>Approval</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Approval</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__PO_Approval</fullName>
        <columns>NAME</columns>
        <columns>rstk__poapproval_approver__c</columns>
        <columns>rstk__poapproval_comments__c</columns>
        <columns>rstk__poapproval_dte__c</columns>
        <columns>rstk__poapproval_ordno__c</columns>
        <columns>rstk__poapproval_slot__c</columns>
        <columns>rstk__poapproval_usrno__c</columns>
        <columns>rstk__poapproval_yn__c</columns>
        <filterScope>Everything</filterScope>
        <label>PO Approval</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>PO Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>